--- a/styles/Games.module.scss
+++ b/styles/Games.module.scss
@@ -13,11 +13,16 @@
         justify-content: center;
         align-items: center;
 
+        background-size: cover;
+        background-position: 50% 50%;
+        background-repeat: no-repeat;
+
         &.cliveleTile {
             background-image: url("../public/img/clivele_thumb.png");
-            background-size: cover;
-            background-position: 50% 50%;
-            background-repeat: no-repeat;
+        }
+
+        &.wackTile {
+            background-image: url("../public/img/whack_thumb.png");
         }
 
         &:hover {
@@ -29,6 +34,7 @@
         a {
             text-decoration: none;
             height: 100%;
+            width: 100%;
         }
 
         .info {
